--- a/projectbill.html
+++ b/projectbill.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="css/billstyle.css">
 
 </head>
-<body style="background-color:pink;">
+<body style="background-color:rgb(212, 192, 255);">
 
-<div class="container">
+<div class="container" style="width:50%;text-align: center;margin: auto;">
 
     <form action="">
+        <div> <image src= "./kick starters.jpeg"/> </div>
 
         <div class="row">
 
