--- a/Cart Page.html
+++ b/Cart Page.html
@@ -21,7 +21,7 @@
 	<h1>Shopping Cart</h1>
 
 	<div class="cart" style="width:50%;text-align: center;margin: auto;">
-		<div> <image src= "./C:\Users\LENOVO\OneDrive\Desktop\Presentation\Kick Starter's.jpeg"/> </div>
+		<div> <image src= "./Kick Starters.jpeg"/> </div>
 
 		<div class="products">
 
