--- a/Bill.html
+++ b/Bill.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/Bill.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
-<body style=" background-color:silver">
-</body>
+<body>
 
 <div class="container">
 
@@ -20,35 +19,30 @@
 
             <div class="col">
 
-                <h3 class="title">Billing Address</h3>
+                <h3 class="title">billing address</h3>
 
                 <div class="inputBox">
                     <span>full name :</span>
                     <input type="text" placeholder="xxxxx">
                 </div>
-                <br>
                 <div class="inputBox">
                     <span>email :</span>
                     <input type="email" placeholder="example@example.com">
                 </div>
-                <br>
                 <div class="inputBox">
                     <span>address :</span>
                     <input type="text" placeholder="room - street - locality">
                 </div>
-                <br>
                 <div class="inputBox">
                     <span>city :</span>
                     <input type="text" placeholder="mumbai">
                 </div>
-                <br>
 
                 <div class="flex">
                     <div class="inputBox">
                         <span>state :</span>
                         <input type="text" placeholder="india">
                     </div>
-                    <br>
                     <div class="inputBox">
                         <span>zip code :</span>
                         <input type="text" placeholder="123 456">
@@ -59,35 +53,30 @@
 
             <div class="col">
 
-                <h3 class="title">Payment</h3>
+                <h3 class="title">payment</h3>
 
                 <div class="inputBox">
                     <span>cards accepted :</span>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAjRreA-ypCrFITa8RHKmg-PgWQEsnCbuwlg&usqp=CAU" width="120px" > 
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAjRreA-ypCrFITa8RHKmg-PgWQEsnCbuwlg&usqp=CAU" alt="">
                 </div>
-                <br>
                 <div class="inputBox">
                     <span>name on card :</span>
-                    <input type="text" placeholder="xxxx">
+                    <input type="text" placeholder="mr. john deo">
                 </div>
-                <br>
                 <div class="inputBox">
                     <span>credit card number :</span>
                     <input type="number" placeholder="1111-2222-3333-4444">
                 </div>
-                <br>
                 <div class="inputBox">
                     <span>exp month :</span>
                     <input type="text" placeholder="january">
                 </div>
-                <br>
 
                 <div class="flex">
                     <div class="inputBox">
                         <span>exp year :</span>
                         <input type="number" placeholder="2022">
                     </div>
-                    <br>
                     <div class="inputBox">
                         <span>CVV :</span>
                         <input type="text" placeholder="1234">
@@ -97,7 +86,7 @@
             </div>
     
         </div>
-        <br>
+
         <input type="submit" value="proceed to checkout" class="submit-btn">
 
     </form>
