--- a/Headsets.html
+++ b/Headsets.html
@@ -1,7 +1,7 @@
 <!DocTYPE html>
 <html>
 <head>
-<title>Kick staters</title>
+<title>Headsets</title>
 </head>
 <body style="background-color:rgb(249, 250, 250);" align='left'>
 <div class="products">
@@ -90,7 +90,7 @@
 			<h2 class= "sm-title"></h2>
 	       </div>
 		<a href="#" class="product-name">Headsets S20XX, new product</a>
-<p class="product-price">price-2999/-</p>
+<p class="product-price">price-3999/-</p>
 <div class="off-info">
 <h2  class=sm-title>12% off</h2>
 		</div>
