--- a/SignUp.html
+++ b/SignUp.html
@@ -18,5 +18,6 @@
            Already User? <a href="Login.html">Login here!</a>
         </p>
     </div>
+    <script src="Login&SignUp.js"></script>
 </body>
 </html>
