--- a/login.html
+++ b/login.html
@@ -15,5 +15,6 @@
             New User? <a href="SignUp.html">Signup here!</a>
         </p>
     </div>
+    <script src="Login&SignUp.js"></script>
 </body>
 </html>
