--- a/bags (3).html
+++ b/bags (3).html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="shoes.css">
+    <link rel="stylesheet" href="bags.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -30,13 +30,13 @@
                     <a class="nav-link" href="#"> Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="file:///C:/capestoneproject/kidswear%20(3)%20(1).html">Kids wear</a>
+                    <a class="nav-link" href="file:///C:/Users/a861677/Downloads/billing.html">Kids wear</a>
                 </li>
 	            <li class="nav-item active">
-                    <a class="nav-link" href="file:///C:/capestoneproject/men%20prod.html">Men's wear</a>
+                    <a class="nav-link" href="file:///C:/Users/a861677/visual/Mobile.html">Men's wear</a>
                 </li>
 	            <li class="nav-item active">
-                    <a class="nav-link" href="file:///C:/capestoneproject/women%20product.html">Women's wear</a>
+                    <a class="nav-link" href="file:///C:/Users/a861677/Downloads/billing.html">Women's wear</a>
                 </li>
 	            <li>
                     <a href="#"><i class="fa fa-shopping-cart"></i></a></li>
@@ -45,16 +45,19 @@
 
         </div>
     </nav>
+
     <div class='main-container'>
-        <h1 class="heading d-flex flex-row">Shoes</h1>
+        <h1 class="heading d-flex flex-row">BAGSS</h1>
         <br>
         <div class="sub-container d-flex flex-row">
             <div class='container-1'>
-                <img src='https://th.bing.com/th/id/OIP.-H0BEb5EJRe1MVEjyC4IcAHaFR?w=258&h=183&c=7&r=0&o=5&dpr=1.5&pid=1.7' class="image" height="300px" wdith="300px" />
+                <img src='https://m.media-amazon.com/images/I/81-SLkiVM0S._UY500_.jpg' class="image" width:"100px"/>
+
                     <div class="product_item_text">
+<br>
                         <div class="d-flex flex-column">
-                            <h1 class="phone-name">Puma Shoes</h1>
-                            <p class="price">Rs.2569/-</p>
+                            <h1 class="phone-name">Stylish Cottonbag</h1>
+                            <p class="price">Rs.2,569/-</p>
                         </div>
                         <div class="button-container">
                             <button type="button" class="btn btn-success">Buy now</button>
@@ -63,11 +66,12 @@
                    </div>
             </div>
             <div class='container-2'>
-                <img src='https://th.bing.com/th/id/OIP.xGp5M5YUIsWWkCaWnWYaKQHaFQ?w=266&h=189&c=7&r=0&o=5&dpr=1.5&pid=1.7' class="image" height="300px" width="300px" />
+                <img src='https://images.squarespace-cdn.com/content/v1/548ec3bee4b068057bfb6db7/1555524365342-FSB67T1LCR7M776FHNTB/palm+trees+bag.jpg?format=1000w' class="image" width="10px" />
                     <div class="product_item_text">
+<br>
                         <div>
-                            <h1 class="phone-name">Nike Trendy Shoes</h1>
-                            <p class="price">Rs.1599/-</p>
+                            <h1 class="phone-name">Sprit Bag</h1>
+                            <p class="price">Rs.1,599/-</p>
                         </div>
                         <div>
                             <button type="button" class="btn btn-success">Buy now</button>
@@ -76,11 +80,11 @@
                    </div>
             </div>
             <div class='container-3'>
-                <img src='https://th.bing.com/th/id/OIP.BrTenVWHylw8mct_vkNVDQHaEi?w=282&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7' class="image" heigth="300px" width="300px">
+                <img src='https://m.media-amazon.com/images/I/31ch8r3QbSL.jpg' class="image"  width="10px">
                     <div class="product_item_text">
                         <div>
-                            <h1 class="phone-name">Puma Run</h1>
-                            <p class="price">Rs.2550/-</p>
+                            <h1 class="phone-name">Stylish handbag</h1>
+                            <p class="price">Rs.969/-</p>
                         </div>
                         <div>
                             <button type="button" class="btn btn-success">Buy now</button>
@@ -134,8 +138,6 @@
                 </div>
             </div>
         </div>
-
-
     </div>
 </body>
 </html>
