--- a/women product.html
+++ b/women product.html
@@ -7,9 +7,44 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/d1c2ea8b80.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-bg fixed-top">
+        <a class="navbar-brand logo" href="#"> Kick<span class="span-item">Start</span>ers </a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                <div class="d-flex flex-row justify-content-end">
+                    <form class="form-inline my-2 mr-lg-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Find product here">
+                        <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                </div>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#"> Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="file:///C:/capestoneproject/kidswear%20(3)%20(1).html">Kids wear</a>
+                </li>
+	            <li class="nav-item active">
+                    <a class="nav-link" href="file:///C:/capestoneproject/men%20prod.html">Men's wear</a>
+                </li>
+	            <li class="nav-item active">
+                    <a class="nav-link" href="file:///C:/capestoneproject/women%20product.html">Women's wear</a>
+                </li>
+	            <li>
+                    <a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+
+            </ul>
+
+        </div>
+    </nav>
     <div class='main-container'>
         <h1 class="heading d-flex flex-row">Women's Wear</h1>
         <br>
@@ -54,6 +89,53 @@
                    </div>
             </div>
         </div>
+        <div class="container bg-container pl-5">
+            <div class="row">
+                <div class="col-12 col-md-4 text-center text-md-left mt-4">
+                    <a class="logo pt-md-5" href="#"> Kick<span class="span-item">Start</span>ers</a>
+                    <div class="m-3 d-flex flex-row justify-content-center justify-content-md-start">
+                        <div class="icon-container mr-3">
+                            <i class="fab fa-google icons"></i>
+                        </div>
+                        <div class="icon-container mr-3">
+                            <i class="fab fa-twitter icons"></i>
+                        </div>
+                        <div class="icon-container mr-3">
+                            <i class="fab fa-instagram icons"></i>
+                        </div>
+                        <div class="icon-container mr-3">
+                            <i class="fab fa-linkedin icons"></i>
+                        </div>
+                    </div>
+                    <p class="para-address"> 501101,Banglore Madal, India. </p>
+                </div>
+                <div class="col-6 col-md-4 mt-5">
+                    <h1> Contact Us </h1>
+                    <div class="d-flex flex-row justify-content-start">
+                        <i class="fas fa-envelope icons"></i>
+                        <p class="pl-3"> kickstarters@gmail.com </p>
+                    </div>
+                    <div class="d-flex flex-row justify-content-start">
+                        <i class="fas fa-phone-alt icons"></i>
+                        <p class="pl-3"> 1234506789 </p>
+                    </div>
+                </div>
+                <div class="col-6 col-md-4 mt-5">
+                    <h1> Let Us Help You </h1>
+                    <p> 100% Purchase</p>
+                    <p> Protection</p>
+                    <p> Your Account </p>
+                    <p> Return Center </p>
+                    <p> Help </p>
+                </div>
+                <div class="col-12">
+                    <hr class="horizontal-line" />
+                    <p class="text-center mb-5"> <i class="far fa-copyright icons"></i> 2022 by KICK STRARTERS.</p>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </body>
 </html>
