Coupon code update

--- a/coupon.html
+++ b/coupon.html
@@ -1,52 +1,124 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  background-color: aqua;
-  font-family: Arial;
-}
-
-.coupon {
-  border: rgb(187, 187, 187);
-  width: 80%;
-  border-radius: 15px;
-  margin: 0 auto;
-  max-width: 600px;
-}
-
-.container {
-  padding: 2px 16px;
-  background-color: #f1f1f1;
-}
-
-.promo {
-  background: #ccc;
-  padding: 3px;
-}
-
-.expire {
-  color: red;
-}
-</style>
-</head>
-<body>
-
-<div class="coupon">
-  <div class="container">
-    <div> <image src= "./kick starters.jpeg"/> </div>
-    <h3>Promo code</h3>
-  </div>
-  <div class="container" style="background-color:whitesmoke">
-    <h2><b>20% OFF YOUR PURCHASE</b></h2> 
-    <p>Apply below  promo code and get 20% off on purchase
-  </div>
-  <div class="container">
-    <p>Use Promo Code: <span class="promo">BOH232</span></p>
-    <p class="expire">Expires: Jan 03, 2021</p>
-  </div>
-</div>
-
-</body>
+  <section id="labels">
+    <div class="container">
+    <div class="row">
+          <div class="col-sm-6 col-md-3">
+            <div class="dl">
+              <div class="brand">
+                  <h2>mango</h2>
+              </div>
+              <div class="discount alizarin">30%
+                  <div class="type">off</div>
+              </div>
+              <div class="descr">
+                  <strong>Mei mucius gloriatur reprimique mollis*.</strong> 
+                  Ad sonet perfecto antiopam mei, denique molestie ne has. 
+              </div>
+              <div class="ends">
+                  <small>* Conditions and restrictions apply.</small>
+              </div>
+              <div class="coupon midnight-blue">
+                  <a data-toggle="collapse" href="#code-1" class="open-code">Get a code</a>
+                  <div id="code-1" class="collapse code">LV5MAY14</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div  class="dl">
+              <div class="brand">
+                  <h2>lacoste</h2>
+              </div>
+              <div class="discount emerald">
+                  50%
+                  <div class="type">
+                      off
+                  </div>
+              </div>
+              <div class="descr">
+                  <strong>
+                      Ea per iuvaret ocurreret*. 
+                  </strong> 
+                  sit ea detraxit menandri mediocritatem, in mel dicant mentitum. 
+              </div>
+              <div class="ends">
+                  <small>
+                     * Conditions and restrictions apply.
+                  </small>
+              </div>
+              <div class="coupon midnight-blue">
+                  <a data-toggle="collapse" href="#code-2" class="open-code">Get a code</a>
+                  <div id="code-2" class="collapse in code">
+                      MNO123ST
+                  </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div  class="dl">
+              <div class="brand">
+                  <h2>
+                      converse
+                  </h2>
+              </div>
+              <div class="discount peter-river">
+              15%
+                  <div class="type">
+                      off
+                  </div>
+              </div>
+              <div class="descr">
+                  <strong>
+                       Solet consul tractatos ei pro*. 
+                  </strong> 
+                  Ei mei quot invidunt explicari, placerat percipitur intellegam.
+              </div>
+              <div class="ends">
+                  <small>
+                     * Conditions and restrictions apply.
+                  </small>
+              </div>
+              <div class="coupon midnight-blue">
+                  <a data-toggle="collapse" href="#code-3" class="open-code">Get a code</a>
+                  <div id="code-3" class="collapse code">
+                      OLV4SY3R
+                  </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div  class="dl">
+              <div class="brand">
+                  <h2>
+                      adidas
+                  </h2>
+              </div>
+              <div class="discount amethyst">
+                  25%
+                  <div class="type">
+                      off
+                  </div>
+              </div>
+              <div class="descr">
+                  <strong>
+                      Cu aliquip persius alterum duo*. 
+                  </strong> 
+                  Possit equidem disputando usu et, sea invidunt scriptorem in. 
+              </div>
+              <div class="ends">
+                  <small>
+                     * Conditions and restrictions apply.
+                  </small>
+              </div>
+              <div class="coupon midnight-blue">
+                  <a data-toggle="collapse" href="#code-4" class="open-code">Get a code</a>
+                  <div id="code-4" class="collapse code">
+                      ZUY4OPLQ
+                  </div>
+              </div>
+            </div>
+          </div>
+    </div>
+    </div>
+  </section>
 </html>
