--- a/Bill.html
+++ b/Bill.html
@@ -6,10 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Bill.css">
 
 </head>
-<body>
+<body style=" background-color:silver">
+</body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-bg fixed-top">
+    <a class="navbar-brand logo" href="#"> Kick<span class="span-item">Start</span>ers </a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <div class="d-flex flex-row justify-content-end">
+            </div>
+        </ul>
+
+    </div>
+</nav>
 
 <div class="container">
 
@@ -19,30 +35,35 @@
 
             <div class="col">
 
-                <h3 class="title">billing address</h3>
+                <h3 class="title">Billing Address</h3>
 
                 <div class="inputBox">
                     <span>full name :</span>
                     <input type="text" placeholder="xxxxx">
                 </div>
+                <br>
                 <div class="inputBox">
                     <span>email :</span>
                     <input type="email" placeholder="example@example.com">
                 </div>
+                <br>
                 <div class="inputBox">
                     <span>address :</span>
                     <input type="text" placeholder="room - street - locality">
                 </div>
+                <br>
                 <div class="inputBox">
                     <span>city :</span>
                     <input type="text" placeholder="mumbai">
                 </div>
+                <br>
 
                 <div class="flex">
                     <div class="inputBox">
                         <span>state :</span>
                         <input type="text" placeholder="india">
                     </div>
+                    <br>
                     <div class="inputBox">
                         <span>zip code :</span>
                         <input type="text" placeholder="123 456">
@@ -53,30 +74,35 @@
 
             <div class="col">
 
-                <h3 class="title">payment</h3>
+                <h3 class="title">Payment</h3>
 
                 <div class="inputBox">
                     <span>cards accepted :</span>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAjRreA-ypCrFITa8RHKmg-PgWQEsnCbuwlg&usqp=CAU" alt="">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAjRreA-ypCrFITa8RHKmg-PgWQEsnCbuwlg&usqp=CAU" width="120px" > 
                 </div>
+                <br>
                 <div class="inputBox">
                     <span>name on card :</span>
-                    <input type="text" placeholder="mr. john deo">
+                    <input type="text" placeholder="xxxx">
                 </div>
+                <br>
                 <div class="inputBox">
                     <span>credit card number :</span>
                     <input type="number" placeholder="1111-2222-3333-4444">
                 </div>
+                <br>
                 <div class="inputBox">
                     <span>exp month :</span>
                     <input type="text" placeholder="january">
                 </div>
+                <br>
 
                 <div class="flex">
                     <div class="inputBox">
                         <span>exp year :</span>
                         <input type="number" placeholder="2022">
                     </div>
+                    <br>
                     <div class="inputBox">
                         <span>CVV :</span>
                         <input type="text" placeholder="1234">
@@ -86,8 +112,8 @@
             </div>
     
         </div>
-
-        <input type="submit" value="proceed to checkout" class="submit-btn">
+        <br>
+        <input type="submit" value="proceed payment" class="submit-btn">
 
     </form>
 
