--- a/Shoes (1).html
+++ b/Shoes (1).html
@@ -3,11 +3,11 @@
 
 <head>
     <link rel="stylesheet" href="shoes.css">
+    <script src="https://kit.fontawesome.com/d1c2ea8b80.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/d1c2ea8b80.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -22,21 +22,17 @@
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 <div class="d-flex flex-row justify-content-end">
                     <form class="form-inline my-2 mr-lg-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Find product here">
-                        <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
                     </form>
                 </div>
+                <a href="file:///C:/Users/a861677/visual/home.html"><i class="fa fa-home"></i></a></li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#"> Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="file:///C:/Users/a861677/Downloads/billing.html">Kids wear</a>
+                    <a class="nav-link" href="file:///C:/Users/a861677/visual/kidswear.html">Kids wear</a>
                 </li>
 	            <li class="nav-item active">
-                    <a class="nav-link" href="file:///C:/Users/a861677/visual/Mobile.html">Men's wear</a>
+                    <a class="nav-link" href="file:///C:/Users/a861677/visual/men%20prod.html">Men's wear</a>
                 </li>
 	            <li class="nav-item active">
-                    <a class="nav-link" href="file:///C:/Users/a861677/Downloads/billing.html">Women's wear</a>
+                    <a class="nav-link" href="file:///C:/Users/a861677/visual/women%20product.html">Women's wear</a>
                 </li>
 	            <li>
                     <a href="#"><i class="fa fa-shopping-cart"></i></a></li>
@@ -50,7 +46,7 @@
         <br>
         <div class="sub-container d-flex flex-row">
             <div class='container-1'>
-                <img src='https://th.bing.com/th/id/OIP.-H0BEb5EJRe1MVEjyC4IcAHaFR?w=258&h=183&c=7&r=0&o=5&dpr=1.5&pid=1.7' class="image" height="300px" wdith="300px" />
+                <img src='https://th.bing.com/th/id/OIP.-H0BEb5EJRe1MVEjyC4IcAHaFR?w=258&h=183&c=7&r=0&o=5&dpr=1.5&pid=1.7' class="image" />
                     <div class="product_item_text">
                         <div class="d-flex flex-column">
                             <h1 class="phone-name">Puma Shoes</h1>
@@ -63,7 +59,7 @@
                    </div>
             </div>
             <div class='container-2'>
-                <img src='https://th.bing.com/th/id/OIP.xGp5M5YUIsWWkCaWnWYaKQHaFQ?w=266&h=189&c=7&r=0&o=5&dpr=1.5&pid=1.7' class="image" height="300px" width="300px" />
+                <img src='https://th.bing.com/th/id/OIP.xGp5M5YUIsWWkCaWnWYaKQHaFQ?w=266&h=189&c=7&r=0&o=5&dpr=1.5&pid=1.7' class="image" />
                     <div class="product_item_text">
                         <div>
                             <h1 class="phone-name">Nike Trendy Shoes</h1>
@@ -76,7 +72,7 @@
                    </div>
             </div>
             <div class='container-3'>
-                <img src='https://th.bing.com/th/id/OIP.BrTenVWHylw8mct_vkNVDQHaEi?w=282&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7' class="image" heigth="300px" width="300px">
+                <img src='https://th.bing.com/th/id/OIP.BrTenVWHylw8mct_vkNVDQHaEi?w=282&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7' class="image"  width="10px">
                     <div class="product_item_text">
                         <div>
                             <h1 class="phone-name">Puma Run</h1>
@@ -134,7 +130,6 @@
                 </div>
             </div>
         </div>
-
 
     </div>
 </body>
