--- a/women product.html
+++ b/women product.html
@@ -3,11 +3,11 @@
 
 <head>
     <link rel="stylesheet" href="women.css">
-    <script src="https://kit.fontawesome.com/d1c2ea8b80.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/d1c2ea8b80.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -22,21 +22,21 @@
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 <div class="d-flex flex-row justify-content-end">
                     <form class="form-inline my-2 mr-lg-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Find product here">
-                        <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
+                        
+                        
                     </form>
                 </div>
                 <li class="nav-item active">
-                    <a class="nav-link" href="file:///C:/Users/a861677/visual/home.html"> Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="file:///C:/Users/Akmal/Desktop/capstone%20project%20final/home1.html#"> Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="file:///C:/Users/a861677/visual/kidswear.html">Kids wear</a>
+                    <a class="nav-link" href="file:///C:/Users/Akmal/Desktop/capstone%20project%20final/kidswear%20(3)%20(1).html">Kids wear</a>
                 </li>
 	            <li class="nav-item active">
-                    <a class="nav-link" href="file:///C:/Users/a861677/visual/men%20prod.html">Men's wear</a>
+                    <a class="nav-link" href="file:///C:/Users/Akmal/Desktop/capstone%20project%20final/men%20prod%20(1).html">Men's wear</a>
                 </li>
 	            <li class="nav-item active">
-                    <a class="nav-link" href="file:///C:/Users/a861677/visual/women%20product.html">Women's wear</a>
+                    <a class="nav-link" href="file:///C:/Users/Akmal/Desktop/capstone%20project%20final/women%20product.html">Women's wear</a>
                 </li>
 	            <li>
                     <a href="#"><i class="fa fa-shopping-cart"></i></a></li>
@@ -79,7 +79,7 @@
                 <img src='https://rukminim2.flixcart.com/image/832/832/khjgeq80hlty2aw-0/dress/f/n/n/m-1-msdrs-494-myshka-original-imafxnmqfwgzhxnk.jpeg?q=70'  class="image"/ height="420px">
                     <div class="product_item_text">
                         <div>
-                            <h1 class="phone-name">Flare Women Blue Dress</h1>
+                            <h1 class="phone-name">Flare Blue Dress</h1>
                             <p class="price">Rs.569/-</p>
                         </div>
                         <div>
@@ -134,6 +134,7 @@
                 </div>
             </div>
         </div>
+
 
     </div>
 </body>
