--- a/home.html
+++ b/home.html
@@ -21,22 +21,25 @@
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 <div class="d-flex flex-row justify-content-end">
                 </div>
-                <a href="file:///C:/Users/a861677/visual/home.html"><i class="fa fa-home"></i></a></li>
+                <a href="file:///C:/Users/Trikanya/Desktop/Capstone/home.html"><i class="fa fa-home"></i></a></li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="file:///C:/Users/a861677/visual/kidswear.html">Kids wear</a>
+                    <a class="nav-link" href="file:///C:/Users/Trikanya/Desktop/Capstone/kidswear.html">Kids wear</a>
                 </li>
 	            <li class="nav-item active">
-                    <a class="nav-link" href="file:///C:/Users/a861677/visual/men%20prod.html">Men's wear</a>
+                    <a class="nav-link" href="file:///C:/Users/Trikanya/Desktop/Capstone/men%20prod%20(1).html">Men's wear</a>
                 </li>
 	            <li class="nav-item active">
-                    <a class="nav-link" href="file:///C:/Users/a861677/visual/women%20product.html">Women's wear</a>
+                    <a class="nav-link" href="file:///C:/Users/Trikanya/Desktop/Capstone/women%20product%20(2).html">Women's wear</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="file:///C:/Users/a861677/visual/kickstarterssignup.html">Signup</a>
+                    <a class="nav-link" href="file:///C:/Users/Trikanya/Desktop/Capstone/kickstarterssignup.html">Signup</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="file:///C:/Users/Trikanya/Desktop/Capstone/kickstarterslogin.html">Login</a>
                 </li>
 	            <li>
                     
-                    <a href="file:///C:/Users/a861677/visual/cart%20new.html"><i class="fa fa-shopping-cart"></i></a></li>
+                    <a href="file:///C:/Users/Trikanya/Desktop/Capstone/cart%20new.html"><i class="fa fa-shopping-cart"></i></a></li>
 
             </ul>
 
@@ -75,7 +78,7 @@
                         <img src="https://img2.exportersindia.com/product_images/bc-full/dir_114/3419746/kids-wear-dress-1485021850-2696283.jpeg" class="card-image mt-4" width="260px">
                         <h1 class="container-heading pt-4">Kids Wear</h1>
                         <p class="card-paragraph"> T-Shirts,Pants...</p>
-                        <a href="file:///C:/Users/a861677/Downloads/kidswear.html" class="mb-5 pt-3 view-more" onclick="display('sectionExploreMenu')"> View More <i class="fas fa-arrow-circle-right mb-5 pt-3"></i></a>
+                        <a href="file:///C:/Users/Trikanya/Desktop/Capstone/kidswear.html" class="mb-5 pt-3 view-more" onclick="display('sectionExploreMenu')"> View More <i class="fas fa-arrow-circle-right mb-5 pt-3"></i></a>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-2 mb-3 text-center">
@@ -85,7 +88,7 @@
                         <br>
                         <h1 class="container-heading pt-4"> Women's Wear </h1>
                         <p class="card-paragraph"> Sarees,Chudidar etc...</p>
-                        <a href="file:///C:/Users/a861677/visual/women%20product.html" class="mb-5 pt-3 view-more"> View More <i class="fas fa-arrow-circle-right mb-5 pt-3"></i></a>
+                        <a href="file:///C:/Users/Trikanya/Desktop/Capstone/women%20product%20(2).html" class="mb-5 pt-3 view-more"> View More <i class="fas fa-arrow-circle-right mb-5 pt-3"></i></a>
                     </div>
                 
                 </div>
@@ -95,7 +98,7 @@
                         <br>
                         <h1 class="container-heading pt-4"> Men's Wear</h1>
                         <p class="card-paragraph"> Jeans,T-shirts...</p>
-                        <a href="file:///C:/Users/a861677/visual/men%20prod.html" class="mb-5 pt-3 view-more"> View More <i class="fas fa-arrow-circle-right mb-5 pt-3"></i></a>
+                        <a href="file:///C:/Users/Trikanya/Desktop/Capstone/men%20prod%20(1).html" class="mb-5 pt-3 view-more"> View More <i class="fas fa-arrow-circle-right mb-5 pt-3"></i></a>
                     </div>
                 </div>
             </div>
@@ -206,7 +209,7 @@
                         <div class="shadow menu-item-card p-3 mb-3">
                             <img src="https://assets.ajio.com/medias/sys_master/root/20210701/yDIT/60dd6f5ef997ddb31216ec89/-473Wx593H-460897549-grey-MODEL.jpg" class="menu-item-image w-100" />
                             <h1 class="menu-card-title">Shoes</h1>
-                            <a href="file:///C:/Users/a861677/visual/Shoes.html" class="menu-item-link">
+                            <a href="file:///C:/Users/Trikanya/Desktop/Capstone/Shoes%20(2).html" class="menu-item-link">
                                 View All
                                 <svg width="16px" height="16px" viewBox="0 0 16 16" class="bi bi-arrow-right-short" fill="#d0b200" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z" />
@@ -218,7 +221,7 @@
                         <div class="shadow menu-item-card p-3 mb-3">
                             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjP0Kx_8jJn3wVs44UFdfA-NSeLoZdkToQWw&usqp=CAU" class="menu-item-image w-100" /width="280px">
                             <h1 class="menu-card-title">Head Phones</h1>
-                            <a href="" class="menu-item-link">
+                            <a href="file:///C:/Users/Trikanya/Desktop/Capstone/headset.html" class="menu-item-link">
                                 View All
                                 <svg width="16px" height="16px" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="#d0b200" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z" />
@@ -230,7 +233,7 @@
                         <div class="menu-item-card shadow p-3 mb-3">
                             <img src="https://www.sathya.store/img/category/0g4mKAv6EDEpxdUt.jpeg" class="menu-item-image w-100" />
                             <h1 class="menu-card-title">Mobiles</h1>
-                            <a href="file:///C:/Users/a861677/visual/Mobile.html" class="menu-item-link">
+                            <a href="file:///C:/Users/Trikanya/Desktop/Capstone/Mobile.html" class="menu-item-link">
                                 View All
                                 <svg width="16px" height="16px" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="#d0b200" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z" />
@@ -242,7 +245,7 @@
                         <div class="menu-item-card shadow p-3 mb-3">
                             <img src="https://www.bulgari.com/dw/image/v2/BCSG_PRD/on/demandware.static/-/Library-Sites-bulgariSharedLibrary/default/dw9da33ee8/bags_and_accessories/collection/SS22/plp/ss22_8.jpg?sw=750" class="menu-item-image w-100" /height="270px">
                             <h1 class="menu-card-title">Bags</h1>
-                            <a href="" class="menu-item-link">
+                            <a href="file:///C:/Users/Trikanya/Desktop/Capstone/bags.html" class="menu-item-link">
                                 View All
                                 <svg width="16px" height="16px" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="#d0b200" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z" />
